--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "build": "webpack --mode production",
-    "test": "jest"
+    "test": "jest",
+    "vercel-build": "echo 'Build completed'"
   },
   "keywords": ["quantum", "chaos", "simulation", "physics", "visualization", "psychedelic"],
   "author": "Quantum Chaos Team",
@@ -17,7 +18,13 @@
     "socket.io": "^4.7.2",
     "three": "^0.155.0",
     "mathjs": "^11.11.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "tone": "^14.7.77",
+    "fft-js": "^0.0.12",
+    "simplex-noise": "^4.0.1",
+    "gl-matrix": "^3.4.3",
+    "dat.gui": "^0.7.9",
+    "stats.js": "^0.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
